Bugfixes for MediaStep